public class MetaData { 

    public class ConstVariable
    {
        public class Scene
        {
            public const string EntryScene = "Entry";
            public const string GameScene = "Game";
        }

        public class GameSetting
        {
            public const string IndexLevel = "IndexLevel";
            public const string Level = "Level";
            public const string Player = "Player";
            public const string Enemy = "Enemy";
            public const string Obstacles = "Obstacles";
            public const string Bullet = "Bullet";
        }

        public class Animation
        {
            public const string isRun = "isRun";
            public const string isDance = "isDance";
            public const string isDie = "isDie";
            public const string isHit = "isHit";
            
        }
    }

}
